plugins/kotlin/idea/tests/testData/multiplatform/duplicateActualsOneWithStrongIncompatibility/top/top.kt
package foo

expect fun <!LINE_MARKER("descr='Has actuals in [bottom, middle] modules'; targets=[(text=bottom); (text=middle)]")!>foo<!>(): Int
